--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,9 +1,9 @@
 <%- include('header'); %>
 <!-- login form -->
     <div class="container-fluid">
-      <h1 class="login-signup-title">Login</h1>
+      <h1 class="login-signup-title">Signup</h1>
       <div class="row login-signup-content">
-        <div class="col-lg-7">
+        <div class="col signup-content">
           <form action="index.html" method="post">
             <div class="form-group">
               <label for="email">Email address</label>
@@ -13,18 +13,10 @@
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" id="password">
-              <a href="#" class="forgot-password">Forgot your password?</a>
             </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Keep me signed in.</label>
-            </div>
-            <button type="submit" class="btn btn-lg first-button login-button"><i class="fas fa-lock"></i> Log in</button>
+            <button type="submit" class="btn btn-lg first-button signup-button "><i class="fas fa-lock"></i> Sign up</button>
+            <a href="/login" class="back-to-login">Back to login</a>
           </form>
-        </div>
-        <div class="col-lg-5 create-account">
-          <h3>I don't have an account</h3>
-          <a href="/sign-up" type="button" class="btn btn-lg second-button create-account-button">Create an account</a>
         </div>
       </div>
     </div>
