--- a/views/login_form.ejs
+++ b/views/login_form.ejs
@@ -1,9 +1,10 @@
 <%- include('header'); %>
 <!-- login form -->
     <div class="container-fluid">
-      <h1 class="login-signup-title">Login</h1>
       <div class="row login-signup-content">
         <div class="col-lg-7">
+          <h1>Login</h1>
+          <br>
           <form action="index.html" method="post">
             <div class="form-group">
               <label for="email">Email address</label>
