--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,13 +1,13 @@
 <%- include('header'); %>
   <!-- hero section -->
   <section id="hero-section" class="hero-section">
-    <div class="container-fluid">
-      <h1 class="hero-title">arcu dictum varius duis at.</h1>
-      <h3 class="hero-subtitle">netus et malesuada</h3>
-      <button type="button" name="button" class="btn btn-lg btn-danger">BUY</button>
-      <button type="button" name="button" class="btn btn-lg btn-outline-light">SELL</button>
-    </div>
-  </section>
+     <div class="container-fluid">
+       <h1 class="hero-title animate__animated animate__fadeInDownBig">arcu dictum varius duis at.</h1>
+       <h3 class="hero-subtitle animate__animated animate__fadeInLeft animate__delay-0.5s">netus et malesuada</h3>
+       <button type="button" name="button" class="btn btn-lg first-button animate__animated animate__fadeIn animate__delay-1s">BUY</button>
+       <button type="button" name="button" class="btn btn-lg second-button animate__animated animate__fadeIn animate__delay-1s">SELL</button>
+     </div>
+   </section>
 
 
   <!-- Select car category section -->
