--- a/views/sell_car.ejs
+++ b/views/sell_car.ejs
@@ -205,41 +205,37 @@
             <h3>Photos</h3>
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-4 col-sm-6 col-auto drop-photo-cols">
                         <div class="drop-zone">
                             <span class="drop-zone__prompt">Drop photo here or click here to upload</span>
                             <input type="file" name="myFile" class="drop-zone__input">
