Added Login/Signup Page title styling

--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,11 +1,9 @@
 <%- include('header'); %>
 <!-- login form -->
     <div class="container-fluid">
+      <h1 class="login-signup-title signup-title-specific">Signup</h1>
       <div class="row login-signup-content">
-
         <div class="col signup-content">
-          <h1 id="sign-up">Sign Up</h1>
-          <br>
           <form action="index.html" method="post">
             <div class="form-group">
               <label for="email">Email address</label>
