fixed the look of the sellcar page

--- a/views/sell_car.ejs
+++ b/views/sell_car.ejs
@@ -5,10 +5,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <!-- seller information section of the form -->
+    <form class="" action="/" method="post">
     <div class="sell-car-info">
         <span class="span-decor"></span>
         <h3>Your Info</h3>
-        <form class="" action="/" method="post">
+
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-6">
@@ -99,7 +100,9 @@
                     </div>
                 </div>
             </div>
+            </div>
 
+            <div class="sell-car-info">
             <span class="span-decor"></span>
             <h3>Car details</h3>
             <div class="form-group">
@@ -199,8 +202,9 @@
                     </div>
                 </div>
             </div>
+            </div>
 
-
+            <div class="sell-car-info">
             <span class="span-decor"></span>
             <h3>Photos</h3>
             <div class="form-group">
@@ -243,6 +247,6 @@
                     </div>
                 </div>
             </div>
+            </div>
             <button type="Submit" class="btn btn-large btn-primary sell-car-submit" name="button">Submit</button>
         </form>
-    </div>
