added detail-view.ejs , detail-view.js and css

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -29,6 +29,7 @@
   <!-- custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/sell_car.js" charset="utf-8" async></script>
+  <script src="js/detail_view.js" charset="utf-8" async></script>
 </head>
 
 <body>
