Added the Car Buying page(Just the Skeleton Structure)

--- a/views/sell_car.ejs
+++ b/views/sell_car.ejs
@@ -250,3 +250,5 @@
             </div>
             <button type="Submit" class="btn btn-large btn-primary sell-car-submit" name="button">Submit</button>
         </form>
+      </section>
+<%- include('footer'); %>
