--- a/views/header.ejs
+++ b/views/header.ejs
@@ -26,8 +26,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-  <!-- custom CSS -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Custom JS -->
   <script src="js/sell_car.js" charset="utf-8" async></script>
   <script src="js/detail_view.js" charset="utf-8" async></script>
 </head>
@@ -45,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Buy</a>
+              <a href="/buy_car" class="nav-link">Buy</a>
             </li>
             <li class="nav-item">
               <a href="/sell_car" class="nav-link">Sell</a>
