--- a/views/buy_car.ejs
+++ b/views/buy_car.ejs
@@ -1,38 +1,67 @@
 <%- include('header'); %>
+  <h1 class="buy-car-title">Cars for Sale</h1>
   <section class="buy-car-section">
     <div class="row buy-car-row">
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
-      <div class="col-lg-4">
-        <img src="images/car4.jfif" alt="" class="buy-car-img">
-        <h2>Car 1</h2>
-      </div>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
+      <a href="#" class="buy-car-a">
+        <div class="col-lg-3 col-md-4 col-sm-6 buy-car-col">
+          <img src="images/car7.jpg" alt="Image not Loaded" class="buy-car-img">
+          <h2 class="buy-car-name">Car 7</h2>
+        </div>
+      </a>
     </div>
   </section>
 <%- include('footer'); %>
