--- a/views/detail_view.ejs
+++ b/views/detail_view.ejs
@@ -39,6 +39,9 @@
 
 <section class="table-section">
   <div class="details-table">
+    <div class="h3-price">
+      <h3>Price: $<span id="price"></span> </h3>
+    </div>
     <table align="center">
       <div class="row">
         <tr>
