--- a/views/sell_car.ejs
+++ b/views/sell_car.ejs
@@ -209,6 +209,15 @@
         </div>
 
         <div class="sell-car-info">
+          <span class="span-decor"></span>
+          <h3>Price</h3>
+          <div class="form-group">
+            <label for="price">Estimated Selling Price</label>
+            <input type="number" name="price" class="form-control" value="" placeholder="40000">
+          </div>
+        </div>
+
+        <div class="sell-car-info">
             <span class="span-decor"></span>
             <h3>Photos</h3>
             <div class="form-group">
